<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundDark">

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado_default"
            android:textSize="48sp"
            android:textColor="@color/textPrimary"/>

        <TextView
            android:id="@+id/txtMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_default"
            android:textSize="24sp"
            android:textColor="@color/textPrimary"
            android:layout_marginBottom="20dp"/>

        <!-- Imagen dinámica -->
        <ImageView
            android:id="@+id/imgResultado"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/imgResultado"
            android:layout_marginBottom="20dp"/>

        <!-- Botón volver -->
        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_reset"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/volver"/>

    </LinearLayout>

</layout>
